src/assets/scss/pages/homepage.scss
$homepage-background: #eaf8f3;

.homepage {
    background: $homepage-background;

    .navbar-default {
        background: transparent;
        border: 0px;

        transition: background 0.4s;
    }

    .navbar-stick {
        background: #fff;
    }
}

@keyframes fadein {
    from {
        opacity: 0;
        top: 50px;
    }
    to {
        opacity: 1;
        top: 0px;
    }
}

.homepage-scalable-header {
    background: url(/img/new-homepage/header.jpg);
    background-size: cover;
    background-position: center 0px;
    padding-bottom: 45%;
    margin-top: 17px;
    position: relative;
    min-height: 760px;

    @media screen and (max-width: $screen-sm) {
        min-height: 300px !important;
    }

    will-change: opacity, top;

    opacity: 0;
    top: 50px;
    animation: fadein 0.6s ease-out 0.2s forwards;
}

.homepage-intro {
    position: relative;
    background: $homepage-background;

    .md-lg-heading-margin {
        margin-top: 70px;
    }

    .xs-sm-heading-margin {
        margin-top: 6px;
    }

    .homepage-lines {
        //    background: url(/img/homepage/lines-bg.png);
        background-size: contain;
        background-position: top;
        background-repeat: no-repeat;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        margin-top: 50px;
        height: 100%;
    }

    .container {
        will-change: opacity, top;
        position: relative;
        top: 50px;
        animation: fadein 0.6s ease-out forwards;
    }
}
.homepage-tips {
    position: relative;
    background: $brand-primary;
}
.homepage-tips > .container {
    position: relative;
}

.homepage-logos,
.homepage-spotlight,
.homepage-benefits {
    background: #fff;
}

.homepage-spotlight {
    @media screen and (max-width: $screen-sm) {
        .spotlight-text {
            order: 1;
        }

        .spotlight-image {
            order: 2;
        }
    }
}

.homepage-standout {
    img {
        width: 115%;
    }

    .bg-image {
        position: absolute;
    }

    @media screen and (max-width: $screen-sm) {
        overflow: hidden;
        margin-right: -15px;
    }
}

.homepage-logos {
    .container {
        min-height: 226px;
    }

    img {
        max-width: 60%;
    }
}

.homepage-customize {
    img {
        max-width: 100%;

        @media screen and (min-width: $screen-sm) {
            margin-top: -125px;
        }
    }
}

.homepage {
    @media screen and (max-width: $screen-sm) {
        //$font-size-h2: 32px;
        //$font-size-h3: 27px;
        //$font-size-h4: 21px;
        //$font-size-h5: 19px;

        h1 {
            font-size: $font-size-h3;
            line-height: 35px !important;
        }

        h2 {
            font-size: $font-size-h4;
            line-height: 32px !important;
        }

        h5 {
            font-size: $font-size-h5;
        }
    }
}

.homepage-benefits {
    min-height: 345px;

    @media screen and (min-width: $screen-sm) {
        .animate-in {
            margin-top: $spacer * 9;
        }
    }
}

.homepage-new-features {
    margin-top: 190px;
    background: linear-gradient(180deg, #ffffff 0%, rgba(216, 216, 216, 0.4) 100%);
}

.homepage-cta {
    background: $brand-primary;

    h1 {
        color: $inverse-color;
    }

    .container {
        height: 500px;
    }

    @media screen and (max-width: $screen-sm) {
        .container {
            height: 334px !important;
        }
    }

    .Grid {
        height: 100%;
    }
}

.homepage-testimonials {
    @media screen and (max-width: $screen-sm) {
        .slick-arrow {
            display: none !important;
        }
    }

    .testimonial-image {
        width: 100%;
        max-width: 228px;
        margin-left: auto;
        margin-right: auto;

        @media screen and (max-width: $screen-xs) {
            max-width: 50%;
        }
    }

    .carousel-container {
        display: flex;
        align-items: center;
    }

    h1 {
        line-height: 56px;
    }

    .Grid {
        display: flex !important;
        height: auto !important;
    }

    .slick-list {
        display: flex !important;
        flex-direction: column !important;
        align-items: center !important;
    }
}

.homepage-panel {
    @media screen and (min-width: $screen-sm) {
        height: 720px;

        .Grid {
            height: 100%;
        }
    }

    @media screen and (max-width: $screen-sm) {
        padding-top: 56px;
    }

    .feature-link {
        color: $brand-primary;
    }
}

.homepage-blog-latest {
    background-color: #1d1d1d;
    height: 157px;
    border-bottom: 1px solid #808080;

    .container,
    .Grid {
        height: 100%;
    }

    a:hover {
        color: #ccc;
    }

    .articles-wrapper {
        width: 100%;
        overflow: hidden;
        min-height: 46px;
    }

    .articles-scrollable {
        width: 5000px;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        display: inline-block;
    }

    .articles-shadow {
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        width: 220px;
        pointer-events: none;
        z-index: 10;
        background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(29, 29, 29, 1));
    }
}

